--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,10 @@
 @import './common';
-@import './example';
+@import './base';
+@import './vars';
+@import './header';
+@import './hero';
+@import './about';
+@import './study';
+@import "./program";
+@import './team';
+@import './price';
