--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -10,7 +10,69 @@
       нестандартные и каверзные вопросы, сложные задачи и не боятся творческих и
       любознательных студентов.
     </p>
+    <div class="swiper mySwiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img
+            class="image-1"
+            src="./images/team/team-6.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            class="image"
+            src="./images/team/team-3.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            class="image"
+            src="./images/team/team-1.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            class="image"
+            src="./images/team/team-4.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            class="image"
+            src="./images/team/team-2.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            class="image"
+            src="./images/team/team-5.png"
+            alt="Team photo"
+            width="305"
+          />
+        </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
 
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+      <!-- If we need scrollbar -->
+      <div class="swiper-scrollbar"></div>
+    </div>
     <div class="team-wrap">
       <div class="team-wrap-1">
         <img
