--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -16,6 +16,12 @@
   height: 80px;
   padding: 19px 10px 10px 10px;
 }
+.header-wrap-2{
+  display: none;
+  @media screen and (min-width:960px) {
+    display: block;
+  }
+}
 .header-nav {
   display: flex;
   gap: 16px;
@@ -74,4 +80,7 @@
 }
 .mobile-menu-btn {
   display: none;
+  // @media screen and (min-width:960px) {
+  //   display: none;
+  // }
 }
