--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,6 @@
         <use href="./images/icons.svg#icon-logo"></use>
       </svg>
     </a>
-    <div class="header-wrap-2">
     <nav>
       <ul class="header-nav list">
         <li>
@@ -32,7 +31,7 @@
         </li>
       </ul>
     </nav>
-    <a href="tel:+38(044)5372260" class="header-phone link">+38 (044) 537 22 60</a></div>
+    <a href="tel:+38(044)5372260" class="header-phone link">+38 (044) 537 22 60</a>
     <button type="button"  class="mobile-menu-btn">
       <svg width="28" height="28">
         <use href="./images/icons.svg#icon-mob-menu"></use>
