--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -9,9 +9,13 @@
       все необходимые инструменты с нуля.
     </p>
     <div class="about-wrap">
-      <img src="./images/play.png" alt="Play video" class="video-img"/>
-      <img src="./images/arow.png" alt="Arow" class="video-arr"/>
-      <img src="./images/text.png" alt="Узнайте как проходит обучение" class="video-text"/>
+      <img src="./images/play.png" alt="Play video" class="video-img" />
+      <img src="./images/arow.png" alt="Arow" class="video-arr" />
+      <img
+        src="./images/text.png"
+        alt="Узнайте как проходит обучение"
+        class="video-text"
+      />
     </div>
   </div>
 </div>
