--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -8,15 +8,15 @@
           <p class="deskr-1">Длительность курса:</p>
           <p class="deskr-2">5 семестров - 2,5 года</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">График:</p>
           <p class="deskr-2">3 раза в неделю по 2 пары</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">Возраст:</p>
           <p class="deskr-2">9 - 55 лет</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">Язык курса:</p>
           <p class="deskr-2">Украинский</p>
         </div>
@@ -24,7 +24,7 @@
       <div class="price-wrap-3">
         <div class="price-wrap-4">
           <div class="price-wrap-1">
-            <p>Оплата частями</p>            
+            <p>Оплата частями</p>
             <p class="money"><span>3920</span>грн/мес</p>
           </div>
           <div class="price-wrap-1">
@@ -46,15 +46,15 @@
           <p class="deskr-1">Длительность курса:</p>
           <p class="deskr-2">5 семестров - 2,5 года</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">График:</p>
           <p class="deskr-2">3 раза в неделю по 2 пары</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">Возраст:</p>
           <p class="deskr-2">9 - 55 лет</p>
         </div>
-        <div>
+        <div class="price-deskr">
           <p class="deskr-1">Язык курса:</p>
           <p class="deskr-2">Украинский</p>
         </div>
@@ -62,7 +62,7 @@
       <div class="price-wrap-3">
         <div class="price-wrap-4">
           <div class="price-wrap-1">
-            <p>Оплата частями</p>            
+            <p>Оплата частями</p>
             <p class="money"><span>3920</span>грн/мес</p>
           </div>
           <div class="price-wrap-1">
