--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,6 @@
 @import './hero';
 @import './about';
 @import './study';
-@import "./program";
+@import './program';
 @import './team';
 @import './price';
