--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -87,6 +87,8 @@
         </div>
       </div>
     </div>
-    <button type="button" class="accent-btn program-btn">Скачать детальную программу</button>
+    <button type="button" class="accent-btn program-btn">
+      Скачать детальную программу
+    </button>
   </div>
 </div>
