--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -17,49 +17,61 @@
         <div class="swiper-slide">
           <img
             class="image-1"
+            srcset="./images/team/team-6@2x.png 2x"
             src="./images/team/team-6.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
         <div class="swiper-slide">
           <img
             class="image"
+            srcset="./images/team/team-3@2x.png 2x"
             src="./images/team/team-3.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
         <div class="swiper-slide">
           <img
             class="image"
+            srcset="./images/team/team-1@2x.png 2x"
             src="./images/team/team-1.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
         <div class="swiper-slide">
           <img
             class="image"
+            srcset="./images/team/team-4@2x.png 2x"
             src="./images/team/team-4.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
         <div class="swiper-slide">
           <img
             class="image"
+            srcset="./images/team/team-2@2x.png 2x"
             src="./images/team/team-2.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
         <div class="swiper-slide">
           <img
             class="image"
+            srcset="./images/team/team-5@2x.png 2x"
             src="./images/team/team-5.png"
             alt="Team photo"
-            width="305"
+            width="450"
+            class="swiper-photo"
           />
         </div>
       </div>
