--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,38 +1,51 @@
 .about {
-    background-color: var(--black-color);
+  background-color: var(--black-color);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  @media screen and (min-width: 960px) {
     padding-top: 120px;
     padding-bottom: 120px;
+  }
 }
 .about-title {
-    font-weight: 700;
-font-size: 48px;
-line-height: calc(58/48);
-text-align: center;
-margin-bottom: 24px;
-color: var(--white-color);
+  font-weight: 700;
+  font-size: 48px;
+  line-height: calc(58 / 48);
+  text-align: center;
+  margin-bottom: 24px;
+  color: var(--white-color);
 }
 .about-text {
-    width: 1000px;
-    margin: 0 auto;
-    font-weight: 500;
-font-size: 20px;
-line-height: 1.45;
-text-align: center;
-color: #A7A7AC;
-margin-bottom: 48px;
+  width: 100%;
+  margin: 0 auto;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.45;
+  text-align: center;
+  color: #a7a7ac;
+  margin-bottom: 24px;
+  @media screen and (min-width: 1400px) {
+    margin-bottom: 48px;
+  }
 }
 .about-wrap {
-    position: relative;
+  position: relative;
 }
 .video-img {
-    margin: 0 auto;
-    margin-bottom: 16px;
+  margin: 0 auto;
+  margin-bottom: 16px;
 }
 .video-arr {
-    position: absolute;
+  position: absolute;
+  left: -40px;
+  bottom: 0;
+  @media screen and (min-width: 1400px) {
     left: 60px;
-    bottom: 0;
+  }
 }
 .video-text {
+  transform: translateX(56px);
+  @media screen and (min-width: 1400px) {
     transform: translateX(160px);
+  }
 }
