--- a/src/sass/_program.scss
+++ b/src/sass/_program.scss
@@ -1,16 +1,23 @@
 .program {
   background-color: var(--black-color);
   border-radius: 16px;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  @media screen and (min-width: 1400px) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 .program-title {
   text-align: center;
-  margin-bottom: 96px;
+  margin-bottom: 40px;
   font-weight: 700;
   font-size: 48px;
   line-height: calc(58 / 48);
   color: var(--white-color);
+  @media screen and (min-width: 1400px) {
+    margin-bottom: 96px;
+  }
 }
 .ac {
   background-color: black !important;
