--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,17 +7,17 @@
         <button type="button" class="accent-btn">Записаться на курс</button>
       </div>
       <img
-        srcset="./images/group-men.png 2x"
+        srcset="./images/group-men@2x.png 2x"
         src="./images/group-men.png"
         alt="hero men"
         class="hero-img"
       />
       <div class="baner">
-        <img src="./images/baner/img-1.png" alt="img-1" class="baner-img-1" />
-        <img src="./images/baner/img-2.png" alt="img-2" class="baner-img-2" />
-        <img src="./images/baner/img-3.png" alt="img-3" class="baner-img-3" />
-        <img src="./images/baner/img-4.png" alt="img-4" class="baner-img-4" />
-        <img src="./images/baner/men.png" alt="men" class="baner-img-5" />
+        <img srcset="./images/baner/img-1@2x.png 2x" src="./images/baner/img-1.png" alt="img-1" class="baner-img-1" />
+        <img srcset="./images/baner/img-2@2x.png 2x" src="./images/baner/img-2.png" alt="img-2" class="baner-img-2" />
+        <img srcset="./images/baner/img-3@2x.png 2x" src="./images/baner/img-3.png" alt="img-3" class="baner-img-3" />
+        <img srcset="./images/baner/img-4@2x.png 2x" src="./images/baner/img-4.png" alt="img-4" class="baner-img-4" />
+        <img srcset="./images/baner/men@2x.png 2x" src="./images/baner/men.png" alt="men" class="baner-img-5" />
       </div>
     </div>
   </div>
