--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,11 +34,44 @@
       <a href="tel:+38(044)5372260" class="header-phone link"
         >+38 (044) 537 22 60</a
       >
-      <button type="button" class="mobile-menu-btn">
+      <button type="button" class="mobile-menu-btn js-open-menu">
         <svg width="28" height="28">
           <use href="./images/icons.svg#icon-mob-menu"></use>
         </svg>
       </button>
+      <button type="button" class="mobile-menu-btn close js-close-menu">
+        <svg width="16" height="16" class="mob-icon">
+          <use href="./images/icons.svg#icon-cross"></use>
+        </svg>
+      </button>
     </div>
+  </div>
+  <div class="mobile-menu js-menu-container">
+    <ul class="header-nav mobile list">
+      <li>
+        <a href="#" class="header-link link arr">Очное обучение</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link">Online-обучение</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link arr">Наши проекты</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link">Мероприятия</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link arr">Об Академии</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link">Контакты</a>
+      </li>
+      <li>
+        <a href="#" class="header-link link header-accent">Live</a>
+      </li>
+    </ul>
+    <a href="tel:+38(044)5372260" class="header-phone link"
+      >+38 (044) 537 22 60</a
+    >
   </div>
 </header>
