--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -93,6 +93,9 @@ nav {
   width: 16px;
   height: 16px;
 }
+.mob-icon{
+  fill: var(--white-color);
+}
 .mobile-menu-btn {
   display: block;
   border: none;
@@ -102,4 +105,47 @@ nav {
   @media screen and (min-width: 960px) {
     display: none;
   }
+}
+.mobile-menu-btn.close{
+  padding: 24px;
+  display: none;
+}
+// .mobile-menu{
+//   display: none;
+// }
+.header-nav.mobile{
+  flex-direction: column;
+}
+.mobile-menu{
+  // display: none;
+position: fixed;
+top: 60px;
+left: 0;
+width: 100vw;
+height: 100vh;
+padding: 20px 20px 80px 20px;
+
+background-color: var(--black-color);
+// display: flex;
+// align-items: flex-end;
+// justify-content: space-between;
+// overflow-y: hidden;
+transform: translateX(100%);
+transition: transform 500ms cubic-bezier(0.65, 0.05, 0.36, 1);
+z-index: 1;
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+.mobile-menu-btn.js-close-menu {
+  display: none;
+}
+.mobile-menu-btn.js-close-menu.is-open {
+  display: block;
+}
+.mobile-menu-btn.js-open-menu.is-open {
+  display: none;
+}
+.no-scroll {
+  overflow: hidden;
 }
