--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,11 +13,11 @@
         class="hero-img"
       />
       <div class="baner">
-        <img srcset="./images/baner/img-1@2x.png 2x" src="./images/baner/img-1.png" alt="img-1" class="baner-img-1" />
-        <img srcset="./images/baner/img-2@2x.png 2x" src="./images/baner/img-2.png" alt="img-2" class="baner-img-2" />
-        <img srcset="./images/baner/img-3@2x.png 2x" src="./images/baner/img-3.png" alt="img-3" class="baner-img-3" />
-        <img srcset="./images/baner/img-4@2x.png 2x" src="./images/baner/img-4.png" alt="img-4" class="baner-img-4" />
-        <img srcset="./images/baner/men@2x.png 2x" src="./images/baner/men.png" alt="men" class="baner-img-5" />
+        <img srcset="./images/baner/img-1@2x.png 2x" src="./images/baner/img-1.png" alt="img-1" class="baner-img-1 js-img-1" />
+        <img srcset="./images/baner/img-2@2x.png 2x" src="./images/baner/img-2.png" alt="img-2" class="baner-img-2 js-img-2" />
+        <img srcset="./images/baner/img-3@2x.png 2x" src="./images/baner/img-3.png" alt="img-3" class="baner-img-3 js-img-3" />
+        <img srcset="./images/baner/img-4@2x.png 2x" src="./images/baner/img-4.png" alt="img-4" class="baner-img-4 js-img-4" />
+        <img srcset="./images/baner/men@2x.png 2x" src="./images/baner/men.png" alt="men" class="baner-img-5 js-men" />
       </div>
     </div>
   </div>
